[package]
name = "ipchecker"
version = "0.1.0"
edition = "2024"
description = "A handy utility tool for IP addresses. Swiss Army knife for IP address operations."
authors = ["Katsuya SAITO"]
license = "MIT"
repository = "https://github.com/kacchan822/ip-checker"
homepage = "https://github.com/kacchan822/ip-checker"
keywords = ["ip", "network", "cli", "utility"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ipchecker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
